Works in docker

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,10 @@ provider:
 plugins:
   - serverless-offline
 
+custom:
+  serverless-offline:
+    host: 0.0.0.0
+
 functions:
   app:
     handler: app/index.handler
