--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ custom:
     host: 0.0.0.0
 
 functions:
-  app:
+  dockerized-serverless-fun1:
     handler: app/index.handler
     events:
     - http:
