Put and get data from AWS dynamoDB

--- a/serverless.yml
+++ b/serverless.yml
@@ -24,11 +24,17 @@ custom:
 
 functions:
   dockerized-serverless-fun1:
-    handler: app/index.handler
+    handler: app/index.putDcument
     events:
     - http:
         method: get
         path: hello
+  dockerized-serverless-query:
+    handler: app/index.queryDocuments
+    events:
+    - http:
+        method: get
+        path: query
 
 resources:
   Resources:
